Infrastructure/k8s/adminer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminer
  template:
    metadata:
      labels:
        app: adminer
    spec:
      containers:
      - name: adminer
        image: adminer:4.7.6-standalone
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"

---

apiVersion: v1
kind: Service
metadata:
  name: adminer-service
spec:
  selector:
    app: adminer
  ports:
  - name: http
    port: 8080
    targetPort: 8080
