Infrastructure/k8s/authentification.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentification-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentification
  template:
    metadata:
      labels:
        app: authentification
    spec:
      containers:
      - name: authentification
        image: pashadigori2000/cloud-computing:auth-image-v2
        ports:
        - containerPort: 8001
---

apiVersion: v1
kind: Service
metadata:
  name: authentification-service
spec:
  type: ClusterIP
  selector:
    app: authentification
  ports:
  - name: http
    port: 8001
    targetPort: 8001
